[package]
name = "gamemaster-bot"
version = "0.1.0"
edition = "2024" 

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "http", "builder", "cache"] }
dotenv = "0.15"

# This is required for the database connection for future leaderboards.
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }

# This is required for the Rock, Paper, Scissors game to make a random choice.
rand = "0.9"

# Shuttle Deployment
shuttle-runtime = "0.57"
shuttle-serenity = "0.57"
shuttle-shared-db = { version = "0.57", features = ["postgres", "sqlx"] }
anyhow = "1"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
async-trait = "0.1"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
panic = "abort"
